# dpp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: main.yml
dpp/: bit_manipulation.hpp  bit_stream.hpp  deflate_pass.cpp  deflate_pass.hpp  defs.hpp  dpp.hpp  hash_table.hpp  histogram.hpp  huffman_coding.cpp  huffman_coding.hpp  rle_coding.hpp  unpacking.cpp  unpacking.hpp  util.hpp
include/: compressor.hpp  compressors.hpp  deflate_compressor.hpp  dpp.hpp  statistics.hpp  table.hpp
include/impl/: deflate_compressor.hpp  deflate_histogram.hpp  huffman_table.hpp
include/interfaces/: compressor.hpp  statistics.hpp  table.hpp
src/: compressors.cpp  deflate_compressor.cpp  deflate_compressor.hpp  deflate_histogram.cpp  deflate_histogram.hpp  deflate_service.hpp  hash_service.hpp  hash_service_impl.cpp  hash_service_impl.hpp  hash_table.hpp  hash_table_default.cpp  hash_table_default.hpp  huffman_coding.cpp  huffman_coding.hpp  huffman_table.cpp  huffman_table.hpp  match_discovery_service.cpp  match_discovery_service.hpp
testdata/: bib  book1  book2  geo  news  obj1  obj2  paper1  paper2  paper3  paper4  paper5  paper6  progc  progl  progp  trans
tests/: CMakeLists.txt  simple_test.cpp
